# peas-test

./: meson.build
dnf/: main.c  meson.build
libdnf/: dnf-activatable.c  dnf-activatable.h  dnf-context.c  dnf-context.h  meson.build
libdnf/plugins/: example-c.plugin  example-plugin.c  example-plugin.h  example-py.plugin  example-python.plugin  example.py  example_python.py  meson.build
libdnf/plugins/embedded/: embedded-plugin.c  embedded-plugin.gresource.xml  embedded-plugin.h  embedded.plugin  meson.build
libdnf/plugins/example/: meson.build
